--- a/Website/index.html
+++ b/Website/index.html
@@ -1,104 +1,276 @@
-﻿<!DOCTYPE html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Optics Demo</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
-    <script>
-        var unityInstance = UnityLoader.instantiate("unityContainer", "Build/test.json", {onProgress: UnityProgress});
-    </script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>UnityOpticsPlugin</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <link href="TemplateData/style.css" rel="stylesheet">
 </head>
-<body style="background-color:papayawhip">
-    <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Unity_Technologies_logo.svg/1200px-Unity_Technologies_logo.svg.png" alt="unity logo" height="100">
-        <img src="https://i.ya-webdesign.com/images/optic-gaming-logo-png-1.png" alt="optic logo" height="100">
-    </header>
-    <main>
-        <p><big><b>Group Member:</b></big></p>
-        <ul>
-            <li>Matthew Rhea</li>
-            <li>Ninghao He</li>
-            <li>Minsu Jang</li>
-            <li>Shealtiel Mulder</li>
-            <li>Baoqing Xie</li>
+
+
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-band" href="#"><img src="images/logo.png" height="70px"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Github</a>
+          </li>
         </ul>
-    </main>
-    <div class="webgl-content">
-        <div id="unityContainer" style="width: 960px; height: 600px"></div>
-        <div class="footer">
-            <div class="webgl-logo"></div>
-            <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-            <div class="title">New Unity Project</div>
-        </div>
+      </div>
     </div>
-    <footer>
-        <br />
-        <b>This is our github project link-------------></b><a href="https://github.com/nobleminsu/UnityOptics-CMPS115-2019Su.git" target="_blank"><img src="https://www.clipartmax.com/png/middle/271-2719444_it-is-the-cat-logo-of-github-drawn-inside-of-a-circle.png" alt="logo" height="20"></a>
-    </footer>
+  </nav>
 
-    <!-- Visualization Code: Shealtiel Mulder -->
-    <div id="viewchart"></div>
-    <!--This is a reference to the Chart API at google.com -->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <!-- Img Slider -->
+  <div id="slides" class="carousel slide" data-ride="carousel">
+    <ul class="carousel-indicators">
+      <li data-target="#slides" data-slide-to="0" class="active"></li>
+      <li data-target="#slides" data-slide-to="1"></li>
+      <li data-target="#slides" data-slide-to="2"></li>
+    </ul>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/bg1.jpg">
+        <div class="carousel-caption">
+          <h1 class="display-2">Unity Optics</h1>
+          <h3>A plugin for unity 3D engine</h3>
+          <button type="button" class="btn btn-outline-light btn-lg"> <a href="firebase.html">VIEW DEMO</a></button>
+          <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/bg2.jpg">
+      </div>
+      <div class="carousel-item">
+        <img src="images/bg3.jpg">
+      </div>
+    </div>
+  </div>
 
-    <script type="text/javascript">
+  <!-- Jumbotron -->
+  <div class="container-fluid">
+    <div class="row jumbotron">
+      <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+        <p class="lead">
+          Unity Optics is a plugin which allow game developer to .
+        </p>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+        <a href="https://www.youtube.com/watch?v=9cKsq14Kfsw"><button type="button"
+            class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
+      </div>
+    </div>
+  </div>
 
-        //var myData = JSON.parse(data)
-        //console.log(data.data[0].objName);
+  <!-- Welcome -->
+  <div class="container-fluid padding">
+    <div class="row welcome text-center">
+      <div class="col-12">
+        <h1 class="display-4">Unity Optics</h1>
+      </div>
+      <hr>
+      <div class="col-12">
+        <p class="lead">With Unity Optics, game developrs are able</p>
+      </div>
+    </div>
+  </div>
 
-        // Load google charts
-        google.charts.load('current', {'packages':['corechart', 'bar']});
-        google.charts.setOnLoadCallback(drawChart);
-        google.charts.setOnLoadCallback(drawBar);
+  <!-- Three Colum Section -->
+  <div class="container-fluid padding">
+    <div class="row text-center padding">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <img src="images/ulogo.jpg" class="logo-brand">
+        <h3>Unity 3D</h3>
+        <p>Built with unity 3d version .</p>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <img src="images/flogo.jpg" class="logo-brand">
+        <h3>Firebase</h3>
+        <p>Built with Firebase .</p>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <i class="fas fa-code"></i>
+        <h3>HTML</h3>
+        <p>Built with HTML5 .</p>
+      </div>
+    </div>
+    <hr class="my-4">
+  </div>
 
-        // Draw the chart and set the chart values
-        function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-        ['Objects', 'per Time Viewed'],
-        ['Object #1', 8],
-        ['Object #2', 3],
-        ['Object #3', 2]
-        ]);
+  <!-- two colums section -->
+  <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-md-12 col-lg-6">
+        <h2>If you use it</h2>
+        <p>You can see asdasdasdasddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd.</p>
+      </div>
+    </div>
+  </div>
+  <hr class="my-4">
 
-        // adds a title, and sets width and height
-        var options = {'title':'View Time per Object', 'width':550, 'height':400};
+  <!-- background -->
+  <figure>
+    <div class="fixed-wrap">
+      <div id="fixed">
+      </div>
+    </div>
+  </figure>
 
-        // Display the chart inside the <div> element with id="viewchart"
-        var chart = new google.visualization.PieChart(document.getElementById('pie_chart_div'));
-        chart.draw(data, options);
-        }
+  <!-- Team -->
+  <div class="container-fluid padding">
+    <div class="row welcome text-center">
+      <div class="col-12">
+        <h1 class="display-4">TEAM</h1>
+      </div>
+      <hr>
+    </div>
+  </div>
 
-        function drawBar() {
-        var data = google.visualization.arrayToDataTable([
-        ['Plugin Objects', 'Min', 'Max'],
-        ['#1', 4.469, 5.428],
-        ['#2', 0.604, 3.416],
-        ['#3', 4.031, 5.852]
-        ]);
+  <!-- Cards -->
+  <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="images/profile1.png">
+          <div class="cardbody">
+            <h4 class="card-title">Matthew Rhea</h4>
+            <p class="card-text">this is Matthew Rhea</p>
+            <a href="#" class="btn btn-outline-secondary">See profile</a>
+          </div>
+        </div>
+      </div>
 
-        var options = {
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="">
+          <div class="cardbody">
+            <h4 class="card-title">john doe</h4>
+            <p class="card-text">this is john</p>
+            <a href="#" class="btn btn-outline-secondary">See profile</a>
+          </div>
+        </div>
+      </div>
 
-        title: 'Minimum and Maximum Distance From Player',
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="">
+          <div class="cardbody">
+            <h4 class="card-title">john doe</h4>
+            <p class="card-text">this is john</p>
+            <a href="#" class="btn btn-outline-secondary">See profile</a>
+          </div>
+        </div>
+      </div>
 
-        width: 550,
-        height: 400
-        };
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="">
+          <div class="cardbody">
+            <h4 class="card-title">john doe</h4>
+            <p class="card-text">this is john</p>
+            <a href="#" class="btn btn-outline-secondary">See profile</a>
+          </div>
+        </div>
+      </div>
 
-        var chart = new google.charts.Bar(document.getElementById('bar_graph_div'));
-        chart.draw(data, google.charts.Bar.convertOptions(options));
-        }
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="">
+          <div class="cardbody">
+            <h4 class="card-title">john doe</h4>
+            <p class="card-text">this is john</p>
+            <a href="#" class="btn btn-outline-secondary">See profile</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    </script>
+  <!-- two colums section -->
+  <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-md-12 col-lg-6">
+        <h2>Our purpose</h2>
+        <p>You can see asdasdasdasddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd.</p>
+        <br>
+      </div>
+      <div class="col-lg-6">
+        <img src="graph.svg">
+      </div>
+    </div>
+  </div>
 
-    <table class="columns">
-        <tr>
-            <td><div id="pie_chart_div" style="border: 1px solid #ccc"></div></td>
-            <td><div id="bar_graph_div" style="border: 1px solid #ccc"></div></td>
-        </tr>
-    </table>
+  <!-- Connect -->
+  <div class="container-fluid paddding">
+    <div class="row text-center padding">
+      <div class="col-12">
+        <h2>Connect</h2>
+      </div>
+      <div class="col-12 social padding">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-google-plus-g"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Connect -->
+  <footer>
+    <div class="container-fluid padding">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <img src="images/logo.png" height="60px">
+          <hr class="light">
+          <p>University of Santa Cruz</p>
+          <p>bxie4@ucsc.edu</p>
+          <p>Cmps115</p>
+        </div>
+        <div class="col-md-4">
+          <hr class="light">
+          <h5>Our meeting times</h5>
+          <hr class="light">
+          <p>Monday 14:00-15:00</p>
+          <p>Wednesday 15:00-16:00</p>
+          <p>Thursday 14:00-15:00</p>
+        </div>
+        <div class="col-md-4">
+          <hr class="light">
+          <h5>Location</h5>
+          <hr class="light">
+          <p>Jake baskin 340b</p>
+          <p>Jake baskin 340a</p>
+          <p>Jake baskin 315</p>
+        </div>
+        <div class="col-12">
+          <hr class="light">
+          <h5>&copy Unity Optics</h5>
+        </div>
+      </div>
+
+    </div>
+
+  </footer>
+
 </body>
+
 </html>
