--- a/Website/unityOpticsDemo.html
+++ b/Website/unityOpticsDemo.html
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
-      <a class="navbar-band" href="#"><img src="logo.png" height="70px"></a>
+      <a class="navbar-band" href="#"><img src="image/logo.png" height="70px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Github</a>
+            <a class="nav-link" href="https://github.com/nobleminsu/UnityOptics-CMPS115-2019Su">Github</a>
           </li>
         </ul>
       </div>
@@ -48,7 +48,7 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="bg1.jpg">
+        <img src="image/bg1.jpg">
         <div class="carousel-caption">
           <h1 class="display-2">Unity Optics</h1>
           <h3>A plugin for unity 3D engine</h3>
@@ -57,10 +57,10 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="bg2.jpg">
+        <img src="image/bg2.jpg">
       </div>
       <div class="carousel-item">
-        <img src="bg3.jpg">
+        <img src="image/bg3.jpg">
       </div>
     </div>
   </div>
@@ -95,12 +95,12 @@
   <div class="container-fluid padding">
     <div class="row text-center padding">
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <img src="ulogo.jpg" class="logo-brand">
+        <img src="image/ulogo.jpg" class="logo-brand">
         <h3>Unity 3D</h3>
         <p>Built with unity 3d version .</p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <img src="flogo.jpg" class="logo-brand">
+        <img src="image/flogo.jpg" class="logo-brand">
         <h3>Firebase</h3>
         <p>Built with Firebase .</p>
       </div>
@@ -118,7 +118,10 @@
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
         <h2>If you use it</h2>
-        <p>You can see asdasdasdasddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd.</p>
+        <p>You can see a.</p>
+      </div>
+      <div class="col-lg-6">
+        <video src="image/gamedemoVideo.mp4" loop controls height="400">Unity demo</video>
       </div>
     </div>
   </div>
@@ -147,7 +150,7 @@
     <div class="row padding">
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="profile1.png">
+          <img class="card-img-top" src="image/profile1.png">
           <div class="cardbody">
             <h4 class="card-title">Matthew Rhea</h4>
             <p class="card-text">this is Matthew Rhea</p>
@@ -158,10 +161,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="">
+          <img class="card-img-top" src="image/profile2.jpg">
           <div class="cardbody">
-            <h4 class="card-title">john doe</h4>
-            <p class="card-text">this is john</p>
+            <h4 class="card-title">Shealtiel Mulder</h4>
+            <p class="card-text">this is Shealtiel Mulder</p>
             <a href="#" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -169,10 +172,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="">
+          <img class="card-img-top" src="image/profile3.jpg">
           <div class="cardbody">
-            <h4 class="card-title">john doe</h4>
-            <p class="card-text">this is john</p>
+            <h4 class="card-title">Ninghao he</h4>
+            <p class="card-text">this is Ninghao he</p>
             <a href="#" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -180,10 +183,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="">
+          <img class="card-img-top" src="image/profile4.png">
           <div class="cardbody">
-            <h4 class="card-title">john doe</h4>
-            <p class="card-text">this is john</p>
+            <h4 class="card-title">Baoqing Xie</h4>
+            <p class="card-text">this is Baoqing Xie</p>
             <a href="#" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -211,9 +214,10 @@
         <br>
       </div>
       <div class="col-lg-6">
-        <img src="graph.svg">
+        <img src="image/graph.svg">
       </div>
     </div>
+    <hr class="my-4">
   </div>
 
   <!-- Connect -->
@@ -237,7 +241,7 @@
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="logo.png" height="60px">
+          <img src="image/logo.png" height="60px">
           <hr class="light">
           <p>University of Santa Cruz</p>
           <p>bxie4@ucsc.edu</p>
