--- a/Website/unityOpticsDemo.html
+++ b/Website/unityOpticsDemo.html
@@ -19,20 +19,20 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
-      <a class="navbar-band" href="#"><img src="image/logo.png" height="70px"></a>
+      <a class="navbar-band" href="unityOpticsDemo.html"><img src="image/logo.png" height="70px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="unityOpticsDemo.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="https://trello.com/b/v2tl3waz/sprint-3">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/nobleminsu/UnityOptics-CMPS115-2019Su">Github</a>
+            <a class="nav-link" target="_blank" href="https://github.com/nobleminsu/UnityOptics-CMPS115-2019Su">Github</a>
           </li>
         </ul>
       </div>
@@ -53,7 +53,7 @@
           <h1 class="display-2">Unity Optics</h1>
           <h3>A plugin for unity 3D engine</h3>
           <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO</button>
-          <button type="button" class="btn btn-primary btn-lg">Get Started</button>
+          <a href="https://drive.google.com/open?id=1N80Mt5VYzWyfS5OOxdxG2fdtqscJ0tnl" target="_blank"><button type="button" class="btn btn-primary btn-lg">Get Started</button></a>
         </div>
       </div>
       <div class="carousel-item">
@@ -69,10 +69,10 @@
   <div class="container-fluid">
     <div class="row jumbotron">
       <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-        <p class="lead">Unity Optics is a plugin which allow game developer to .</p>
+        <p class="lead">Unity Optics is a unity 3D plugin which allow game developer to attarct gamers' behaviors. So developer could get data from player for better game experience .</p>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-        <a href="https://www.youtube.com/watch?v=9cKsq14Kfsw"><button type="button"
+        <a href="unityOpticsDemo.html"><button type="button"
             class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
       </div>
     </div>
@@ -86,7 +86,8 @@
       </div>
       <hr>
       <div class="col-12">
-        <p class="lead">With Unity Optics, game developrs are able</p>
+        <p class="lead">For better game development
+        </p>
       </div>
     </div>
   </div>
@@ -97,17 +98,17 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <img src="image/ulogo.jpg" class="logo-brand">
         <h3>Unity 3D</h3>
-        <p>Built with unity 3d version .</p>
+        <p>Built with unity 3d version 2019.3.0a8.</p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <img src="image/flogo.jpg" class="logo-brand">
         <h3>Firebase</h3>
-        <p>Built with Firebase .</p>
+        <p>Built with Firebase.</p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <i class="fas fa-code"></i>
         <h3>HTML</h3>
-        <p>Built with HTML5 .</p>
+        <p>Built with HTML5, CSS and javascript.</p>
       </div>
     </div>
     <hr class="my-4">
@@ -117,7 +118,7 @@
   <div class="container-fluid padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
-        <h2>If you use it</h2>
+        <h2>If you use our plugin</h2>
         <p>You can see a.</p>
       </div>
       <div class="col-lg-6">
@@ -153,7 +154,7 @@
           <img class="card-img-top" src="image/profile1.png">
           <div class="cardbody">
             <h4 class="card-title">Matthew Rhea</h4>
-            <p class="card-text">this is Matthew Rhea</p>
+            <p class="card-text">This is Matthew Rhea. He is product owner of the team.</p>
             <a href="#" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -164,8 +165,8 @@
           <img class="card-img-top" src="image/profile2.jpg">
           <div class="cardbody">
             <h4 class="card-title">Shealtiel Mulder</h4>
-            <p class="card-text">this is Shealtiel Mulder</p>
-            <a href="#" class="btn btn-outline-secondary">See profile</a>
+            <p class="card-text">This is Shealtiel Mulder. He is sprint one scrum master.</p>
+            <a href="https://www.facebook.com/shealtiel.mulder" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
       </div>
@@ -175,8 +176,8 @@
           <img class="card-img-top" src="image/profile3.jpg">
           <div class="cardbody">
             <h4 class="card-title">Ninghao he</h4>
-            <p class="card-text">this is Ninghao he</p>
-            <a href="#" class="btn btn-outline-secondary">See profile</a>
+            <p class="card-text">This is Ninghao he. He is sprint two scrum master.</p>
+            <a href="https://www.facebook.com/ninghao.he" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
       </div>
@@ -186,23 +187,24 @@
           <img class="card-img-top" src="image/profile4.png">
           <div class="cardbody">
             <h4 class="card-title">Baoqing Xie</h4>
-            <p class="card-text">this is Baoqing Xie</p>
-            <a href="#" class="btn btn-outline-secondary">See profile</a>
+            <p class="card-text">This is Baoqing Xie. He is sprint one scrum master.</p>
+            <a href="https://www.facebook.com/profile.php?id=100022616195337" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="">
+          <img class="card-img-top" src="image/profile5.jpg">
           <div class="cardbody">
-            <h4 class="card-title">john doe</h4>
-            <p class="card-text">this is john</p>
+            <h4 class="card-title">Minsu Jang</h4>
+            <p class="card-text">This is Minsu Jang. He is sprint three scrum master.</p>
             <a href="#" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
       </div>
     </div>
+    <hr class="my-4">
   </div>
 
   <!-- two colums section -->
@@ -210,11 +212,14 @@
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
         <h2>Our purpose</h2>
-        <p>You can see asdasdasdasddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd.</p>
+        <p>As a game developer you can format and store my data in a database</p>
+        <p>As a game developer you can display my game on a website with visualizations 
+           of the data so that you can analyze what your players are doing</p>
+        <p>As an advertiser, you can have a web platform to view the data collected on my ads.</p>
         <br>
       </div>
       <div class="col-lg-6">
-        <img src="image/graph.svg">
+        <img src="image/bg5.jpg" class="wider">
       </div>
     </div>
     <hr class="my-4">
@@ -227,16 +232,16 @@
         <h2>Connect</h2>
       </div>
       <div class="col-12 social padding">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-google-plus-g"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100022616195337"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/BaoqingXie"><i class="fab fa-twitter"></i></a>
+        <a href="https://developers.google.com/+/"><i class="fab fa-google-plus-g"></i></a>
+        <a href="https://www.instagram.com/unityoptics/?hl=en"><i class="fab fa-instagram"></i></a>
+        <a href="https://youtu.be/5QiFHIHANKg"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
   </div>
 
-  <!-- Connect -->
+  <!-- footer -->
   <footer>
     <div class="container-fluid padding">
       <div class="row text-center">
