--- a/Website/unityOpticsDemo.html
+++ b/Website/unityOpticsDemo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,17 +19,17 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
-      <a class="navbar-band" href="unityOpticsDemo.html"><img src="image/logo.png" height="70px"></a>
+      <a class="navbar-band" href="unityOpticsDemo.html"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+          <!-- <li class="nav-item"> -->
+          <!--  <a class="nav-link" href="unityOpticsDemo.html">Home</a> -->
+          <!--</li>-->
           <li class="nav-item">
-            <a class="nav-link" href="unityOpticsDemo.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://trello.com/b/v2tl3waz/sprint-3">About</a>
+            <a class="nav-link" href="https://trello.com/b/v2tl3waz/sprint-3">Trello</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" target="_blank" href="https://github.com/nobleminsu/UnityOptics-CMPS115-2019Su">Github</a>
@@ -51,16 +51,10 @@
         <img src="image/bg1.jpg">
         <div class="carousel-caption">
           <h1 class="display-2">Unity Optics</h1>
-          <h3>A plugin for unity 3D engine</h3>
-          <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO</button>
-          <a href="https://drive.google.com/open?id=1N80Mt5VYzWyfS5OOxdxG2fdtqscJ0tnl" target="_blank"><button type="button" class="btn btn-primary btn-lg">Get Started</button></a>
+          <h3>An Advertisement Tool for the Unity 3D Game Engine</h3>
+          <button type="button" class="btn btn-outline-light btn-lg"><a href="firebase.html">VIEW FIREBASE DEMO</a></button>
+          <a href="https://github.com/nobleminsu/UnityOptics-CMPS115-2019Su" target="_blank"><<button type="button" class="btn btn-primary btn-lg">GET STARTED</button></a>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="image/bg2.jpg">
-      </div>
-      <div class="carousel-item">
-        <img src="image/bg3.jpg">
       </div>
     </div>
   </div>
@@ -69,12 +63,9 @@
   <div class="container-fluid">
     <div class="row jumbotron">
       <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-        <p class="lead">Unity Optics is a unity 3D plugin which allow game developer to attarct gamers' behaviors. So developer could get data from player for better game experience .</p>
+        <p class="lead">Unity Optics is a plugin for the Unity3D Game Engine. It enables developers to add 3D-based advertisement tools to their in-game objects. Simply attach the plugin script to any 3D object and you can record all currently available telemetry options: Distance, time spent watching, whether they read the advertisement, and more!</p>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-        <a href="unityOpticsDemo.html"><button type="button"
-            class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
-      </div>
+
     </div>
   </div>
 
@@ -82,12 +73,10 @@
   <div class="container-fluid padding">
     <div class="row welcome text-center">
       <div class="col-12">
-        <h1 class="display-4">Unity Optics</h1>
+        <h1 class="display-4">Unity Optics Was Developed With:</h1>
       </div>
       <hr>
       <div class="col-12">
-        <p class="lead">For better game development
-        </p>
       </div>
     </div>
   </div>
@@ -98,17 +87,17 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <img src="image/ulogo.jpg" class="logo-brand">
         <h3>Unity 3D</h3>
-        <p>Built with unity 3d version 2019.3.0a8.</p>
+        <p>The Unity3D Game Engine in C#</p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <img src="image/flogo.jpg" class="logo-brand">
         <h3>Firebase</h3>
-        <p>Built with Firebase.</p>
+        <p>Google Firebase Storage and Realtime Database</p>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <i class="fas fa-code"></i>
-        <h3>HTML</h3>
-        <p>Built with HTML5, CSS and javascript.</p>
+        <h3>Front-End</h3>
+        <p>HTML5, CSS, and Javascript</p>
       </div>
     </div>
     <hr class="my-4">
@@ -118,8 +107,8 @@
   <div class="container-fluid padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
-        <h2>If you use our plugin</h2>
-        <p>You can see a.</p>
+        <h2>Video Demo</h2>
+        <p>In this video demo you can view the interactions added to 3D objects within your game. All of these actions are recorded and stored in Firebase Storage for later retrieval.</p>
       </div>
       <div class="col-lg-6">
         <video src="image/gamedemoVideo.mp4" loop controls height="400">Unity demo</video>
@@ -151,10 +140,10 @@
     <div class="row padding">
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="image/profile1.png">
+          <img class="card-img-top" src="images/profile1.png">
           <div class="cardbody">
             <h4 class="card-title">Matthew Rhea</h4>
-            <p class="card-text">This is Matthew Rhea. He is product owner of the team.</p>
+            <p class="card-text">Product Owner and Developer</p>
             <a href="#" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -162,10 +151,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="image/profile2.jpg">
+          <img class="card-img-top" src="image/unity3d-logo.png">
           <div class="cardbody">
             <h4 class="card-title">Shealtiel Mulder</h4>
-            <p class="card-text">This is Shealtiel Mulder. He is sprint one scrum master.</p>
+            <p class="card-text">Developer and Scrum Master of Sprint 1</p>
             <a href="https://www.facebook.com/shealtiel.mulder" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -176,7 +165,7 @@
           <img class="card-img-top" src="image/profile3.jpg">
           <div class="cardbody">
             <h4 class="card-title">Ninghao he</h4>
-            <p class="card-text">This is Ninghao he. He is sprint two scrum master.</p>
+            <p class="card-text">Developer and Srum Master of Sprint 2</p>
             <a href="https://www.facebook.com/ninghao.he" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -184,10 +173,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="image/profile4.png">
+          <img class="card-img-top" src="image/unity3d-logo.png">
           <div class="cardbody">
             <h4 class="card-title">Baoqing Xie</h4>
-            <p class="card-text">This is Baoqing Xie. He is sprint one scrum master.</p>
+            <p class="card-text">Developer and Scrum Master of Sprint 1</p>
             <a href="https://www.facebook.com/profile.php?id=100022616195337" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -195,10 +184,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="image/profile5.jpg">
+          <img class="card-img-top" src="image/unity3d-logo.png">
           <div class="cardbody">
             <h4 class="card-title">Minsu Jang</h4>
-            <p class="card-text">This is Minsu Jang. He is sprint three scrum master.</p>
+            <p class="card-text">Developer and Scrum Master of Sprint 3</p>
             <a href="#" class="btn btn-outline-secondary">See profile</a>
           </div>
         </div>
@@ -211,11 +200,8 @@
   <div class="container-fluid padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
-        <h2>Our purpose</h2>
-        <p>As a game developer you can format and store my data in a database</p>
-        <p>As a game developer you can display my game on a website with visualizations 
-           of the data so that you can analyze what your players are doing</p>
-        <p>As an advertiser, you can have a web platform to view the data collected on my ads.</p>
+        <h2>Our Purpose</h2>
+        <p>Our desire to learn more about the Unity3D game engine led to this project.</p>
         <br>
       </div>
       <div class="col-lg-6">
@@ -246,7 +232,7 @@
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="image/logo.png" height="60px">
+          <img src="images/logo.png" height="60px">
           <hr class="light">
           <p>University of Santa Cruz</p>
           <p>bxie4@ucsc.edu</p>
@@ -256,17 +242,19 @@
           <hr class="light">
           <h5>Our meeting times</h5>
           <hr class="light">
-          <p>Monday 14:00-15:00</p>
+          <p>Monday 13:00-15:00</p>
+          <p>Tuesday 13:00-15:00</p>
           <p>Wednesday 15:00-16:00</p>
           <p>Thursday 14:00-15:00</p>
+          <p>Friday 14:00-15:00</p>
         </div>
         <div class="col-md-4">
           <hr class="light">
-          <h5>Location</h5>
+          <h5>Locations</h5>
           <hr class="light">
-          <p>Jake baskin 340b</p>
-          <p>Jake baskin 340a</p>
-          <p>Jake baskin 315</p>
+          <p>Jack Baskin 340b</p>
+          <p>Jack Baskin 340a</p>
+          <p>Jack Baskin 316</p>
         </div>
         <div class="col-12">
           <hr class="light">
