Fix CORS error that blocked XML requests across domains to FIrebase storage from demo website

--- a/Website/firebase.html
+++ b/Website/firebase.html
@@ -5,13 +5,13 @@
         <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-storage.js"></script>
     </head>
-
-        <h1 id="SampleOutput">Data from Firestore:</h1>
+        <h1 id="SampleOutput">Data from Firebase Storage:</h1>
         <input type="textfield" id="latestSampleOutput" />
         <button id="saveButton">Save</button>
         <button id="loadButton">Load</button>
-        <script src="./uploadFromFireStore.js"></script>
+        <script src="./downloadFromFirebase.js"></script>
 
     <body>
 </html>
