Change function name

--- a/Website/vizualization/VisualizationDemo.html
+++ b/Website/vizualization/VisualizationDemo.html
@@ -16,7 +16,7 @@
   
 </head>
 
-<body onload="godwhatthefuck()">
+<body onload="visualizeData()">
   <div id="viewchart"></div>
   <table class="columns">
     <tr>
